--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
              <footer>
            
                     <div class="navbar" id="myNavbar">
-                        <a href="#">About us</a>
+                        <a href="http://yummyandhealthy.github.io/about-us">About us</a>
                         <a href="#">Blog</a>
                         <a href="#">Press</a>
                         <a href="#">iOS App</a>
